--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
-.body{
+body{
     font-family:  'Tinos', serif;
+    margin: 0;
+}
+h1{
+    font-size: 415%;
+}
+.orange-color{
+    color: orange;
+}
+section{
+    display: flex;
+}
+.half-width{
+    width: 50%;
+    padding-left: 5%;
+}
+.half-width img{
+    padding-top: 10%;
+    width: 87%;
+}
+.link-button{
+    color: azure;
+    font-weight: 700;
+    text-decoration: none;
+    background-image: linear-gradient(89deg, lightsalmon, tomato);
+    padding: 10px 40px;
+    border-radius: 5px;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
