--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ h1{
 .orange-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
@@ -32,6 +32,10 @@ section{
     background-image: linear-gradient(89deg, lightsalmon, tomato);
     padding: 10px 40px;
     border-radius: 5px;
+}
+.top-banner{
+    background-image: url(/images/top-banner.png);
+    background-repeat: no-repeat;
 }
 .dream-big{
     background-image: url(images/dream-bg.png);
