--- a/style.css
+++ b/style.css
@@ -37,16 +37,16 @@ h2{
     border-radius: 5px;
 }
 .top-banner{
-    background-image: url(/images/top-banner.png);
+    background-image: url(./images/top-banner.png);
     background-repeat: no-repeat;
 }
 .dream-big{
-    background-image: url(images/dream-bg.png);
+    background-image: url(./images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
 }
 .experience-area{
-    background-image: url(/images/exp-bg.png);
+    background-image: url(./images/exp-bg.png);
     background-repeat: no-repeat;
     background-position: 0px 150px;
 }
